"数据请求，轮播图渲染"

--- a/src/components/movie/Carousel/index.less
+++ b/src/components/movie/Carousel/index.less
@@ -1,11 +1,21 @@
 .movie-app {
-  .am-wingblank {
-    margin-left: 0px;
-    margin-right: 0px;
 
-    .am-wingblank-lg {
-      margin-left: 0px;
-      margin-right: 0px;
+  //.am-wingblank {
+  //  margin-left: 0px;
+  //  margin-right: 0px;
+  //
+  //  .am-wingblank-lg {
+  //    margin-left: 0px;
+  //    margin-right: 0px;
+  //  }
+  //}
+  .movie-content {
+    .homeContent {
+      .carouse {
+        .space-carousel {
+          height: inherit;
+        }
+      }
     }
   }
 }
