"解决箭头函数报错"

--- a/src/components/movie/Carousel/index.less
+++ b/src/components/movie/Carousel/index.less
@@ -13,7 +13,19 @@
     .homeContent {
       .carouse {
         .space-carousel {
-          height: inherit;
+          height: inherit !important;
+          .slider-frame{
+            height: inherit !important;
+            .slider-list{
+              height: inherit !important;
+              .slider-slide{
+                height: inherit !important;
+                img{
+                  height: 100%;
+                }
+              }
+            }
+          }
         }
       }
     }
