--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -3,8 +3,11 @@
   .movie-content{
 
     .homeContent{
+      overflow: hidden;
+      padding: 0px;
+      box-sizing: border-box;
       .carouse{
-        height: 200px;
+        height: 250px;
       }
     }
   }
