--- a/src/components/movie/Carousel/index.less
+++ b/src/components/movie/Carousel/index.less
@@ -14,14 +14,23 @@
       .carouse {
         .space-carousel {
           height: inherit !important;
-          .slider-frame{
+
+          .slider-frame {
             height: inherit !important;
-            .slider-list{
+
+            .slider-list {
               height: inherit !important;
-              .slider-slide{
+
+              .slider-slide {
                 height: inherit !important;
-                img{
-                  height: 100%;
+
+                .react-weui-swiper__item {
+                  touch-action: none;
+
+                  img {
+                    height: 100%;
+                    touch-action: none;
+                  }
                 }
               }
             }
