--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -7,7 +7,10 @@
       padding: 0px;
       box-sizing: border-box;
       .carouse{
-        height: 250px;
+        height: 200px;
+      }
+      .movieList{
+        height: 500px;
       }
     }
   }
